Stylesheets/style.css
/* ... */
.motif-title span {
  white-space: pre;
}

.chosen-in-control {
  -webkit-box-sizing: border-box; /* ≤ iOS4, ≤ Android  2.3 */
  -moz-box-sizing: border-box; /* FF1+ */
  box-sizing: border-box; /* Chrome, IE8, Opera, Safari 5.1*/
  height: 3rem;
  max-width: 13rem;
  margin-bottom: 0.8rem;
  margin-right: 0.8rem;
  background-color: #e2e2e2;
  border-radius: 0.4rem;
}

.chosen-in-control .close {
  margin-top: 0.3rem;
  margin-left: 0.3rem;
  font-size: 1.18rem;
  border-radius: 0.25rem;
}

.chosen-in-control .close:hover {
  background-color: #afafaf;
}

.sp-replacer {
  background-color: white;
  width: 1.75rem !important;
  margin-top: -0.65rem;
  margin-left: 0.4rem;
  height: 1.05rem !important;
}

.sp-dd {
  height: 1.05rem;
  width: 0.4rem;
}

.description {
  position: absolute;
  margin-top: 0.26rem;
  margin-left: 0.5rem;
  font-size: 1rem;
}

.chosen-in-control .motif-title {
  display: block;
  font-size: 0.9rem;
  color: #180ea4;
}

.chosen-in-search {
  display: inline-block;
  -webkit-box-sizing: border-box; /* ≤ iOS4, ≤ Android  2.3 */
  -moz-box-sizing: border-box; /* FF1+ */
  box-sizing: border-box; /* Chrome, IE8, Opera, Safari 5.1*/
  width: 48.75%;
  margin: 0 0 0.3rem 1.25%;
  padding-left: 0.3rem;
  background-color: #e2e2e2;
  border-radius: 0.4rem;
  border: 0.04rem solid #9d9d9d;
}

.chosen-in-search .hocomoco-info {
  color: #180ea4;
  text-decoration: none;
}

.chosen-in-search:nth-of-type(1), .chosen-in-search:nth-of-type(2) {
  margin-top: 0.3rem !important;
}

.subfamily-shown .chosen-in-search {
  width: 32.5% !important;
  margin: 0 0 0.3rem 0.8%;
}

.subfamily-shown .chosen-in-search:nth-of-type(3) {
  margin-top: 0.3rem !important;
}

.chosen-in-search .close {
  display: inline;
  float: top;
  font-size: 0.9rem;
  margin-right: 0.3em;
  vertical-align: middle;
  cursor: pointer;
}

.chosen-in-search .motif-title {
  font-size: 0.9rem;
  display: inline-block;
  margin-top: -0.2rem;
}

.chosen-in-search :is(.hocomoco-info, span) {
  font-size: 0.8rem;
}

.close.mouseover {
  background-color: #afafaf !important;
  border-radius: 0.2rem !important;
}

.hocomoco-info {
  color: #180ea4;
  text-decoration: none;
}

#legend-container {
  border-bottom: 0.04rem solid #9d9d9d;
  border-radius: 0.58rem 0.58rem 0 0;
  height: 1.6rem;
  background-color: #e2e2e2;
}

.legend {
  font-size: 0.9rem;
  display: inline-block;
  margin-top: 0.3rem;
  vertical-align: top;
  height: 1.3rem;
}

.empty {
  visibility: hidden;
  display: none;
}

.suggestions {
  z-index: 11;
  width: 36.5rem;
  margin-left: -0.2rem;
  margin-top: 0.5rem;
  background-color: #f1f1f1;
  border: 0.04rem solid #9d9d9d;
  border-radius: 0.6rem;
  -webkit-box-shadow: 0 0.7rem 2rem 0.32rem rgba(0, 0, 0, 0.3);
  -moz-box-shadow: 0 0.7rem 2rem 0.32rem rgba(0, 0, 0, 0.3);
  box-shadow: 0 0.7rem 2rem 0.32rem rgba(0, 0, 0, 0.3);
}

.suggestions.subfamily-shown {
  width: 54.5rem !important;
}

#motif-list {
  max-height: 24.42rem;
  overflow-y: scroll;
  -ms-overflow-style: none;  /* IE 10+ */
  scrollbar-width: none; /* Firefox */
  overflow: -moz-scrollbars-none;
}

#motif-list::-webkit-scrollbar { /* Webkit */
  width: 0;  /* ширина scrollbar'a */
  background: transparent;  /* опционально */
}

.suggestion {
  height: 3.5rem;
}

.hover-behavior:focus {
  background-color: #b7b8b4;
  outline: none;
}

.chosen-in-list {
  background-color: #cdcdcd;
  cursor: pointer;
}

.hover-behavior:focus .chosen-in-list {
  -webkit-box-shadow: inset 0 0 0 0.3rem #b7b8b4;
  -moz-box-shadow: inset 0 0 0 0.3rem #b7b8b4;
  box-shadow: inset 0 0 0 0.3rem #b7b8b4;
  background-color: #cdcdcd;
}

.feature {
  display: inline-block;
  padding-top: 0.4rem;
}

.motif-title {
  width: 14.5rem;
  margin-left: 0.5rem;
}

.motif-title.subfamily-shown {
  width: 16.5rem !important;
}

.motif-family, .motif-subfamily {
  width: 14rem;
  max-width: 14rem;
  vertical-align: top;
  padding-right: 0.5rem;
}

.motif-family p, .motif-subfamily p {
  width: 14rem;
  margin: 0;
  white-space: normal;
}

.motif-subfamily.hidden {
  position: absolute;
}

.motif-gene {
  width: 7rem;
}

.motif-gene.subfamily-shown {
  width: 8.5rem;
}

#support-info {
  height: 2rem;
  border-top: 0.04rem solid #9d9d9d;
  background-color: #e2e2e2;
  border-radius: 0 0 0.6rem 0.6rem;
  text-align: center;
}

.info {
  display: inline-block;
  margin-top: 0.35rem;
  margin-left: 0.5rem;
}

#subfamily-button {
  position: relative;
  float: left;
  width: 7.5rem;
  margin-top: 0.35rem;
  margin-left: 0.5rem;
  margin-right: 2.8rem;
  background-color: #f1f1f1;
}

.motif-count {
  margin-left: 0;
}

.model-collection {
  float: right;
  margin-right: 0.9rem;
}

.not-chosen {
  border-bottom-left-radius: 0 !important;
  border-bottom-right-radius: 0 !important;
}

.not-found {
  border-top: 0 !important;
  border-top-left-radius: 0.548rem !important;
  border-top-right-radius: 0.548rem !important;
}

#error-report {
  display: none;
  vertical-align: middle;
  font-size: 1.2rem;
  color: #bb433f;
  padding: 0.05rem 0.05rem 0.01rem;
  cursor: pointer;
  text-align: center;

}

#second-level {
  display: flex;
  flex-flow: row wrap;
  min-height: 4rem;
  margin-left: 0.8rem;
}

.p-inputs {
  display: inline-block;
  float: left;
  height: 3rem;
  margin-right: 1.2rem;
}

.p-inputs label {
  font-size: 0.9rem;
}

.pvalue-input {
  font-size: 0.7rem;
  margin-bottom: 0.5rem;
  width: 3.3rem;
  padding: 0 0.2rem 0 0.2rem;
  border: 0.08rem solid #9d9d9d;
  border-radius: 0.3rem;
  background-color: #f1f1f1;
}

#pvalue_log {
  width: 1.7rem;
  margin-right: 0.6rem;
}

.slider label {
  font-family: "Lucida Console", "Monospaced", monospace;
  font-size: 0.65rem;
  display: block;
  width: 92.9%;
  margin-left: 6.2%;
  text-align: justify;
  height: 0.65rem;
}

.slider label:after {
  content: "";
  display: inline-block;
  width: 100%;
}

#pvalue_slider {
  width: 100%;
  height: 0.8rem;
}
/* ... */

